--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -1,18 +1,33 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 10vh;
+    display: flex;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
+}
+
+.link{
+    color: azure;
+    padding: 20px;
+    margin: 20px;
+    background-color: gray;
+}
+
+.costsTable{
+    align-content: center;
+    align-items: center;
+}
+
+.costsDiv{
+    margin: 100px;
+    background-color: azure;
 }
